[project]
name = "claude-compte"
version = "0.1.0"
description = "Token usage analytics dashboard for Claude Code on your local"

requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.scripts]
claude-compte = "claude_compte.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_compte"]
